# ai-engineering-team

./: README.md  pyproject.toml
output/: app.py  tax_calculator.py  tax_calculator.py_design.md  test_tax_calculator.py
src/ai_engineering_team/: crew.py  main.py
src/ai_engineering_team/config/: agents.yaml
