[project]
name = "ai_engineering_team"
version = "0.1.0"
description = "ai_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "gradio>=5.22.0",
]

[project.scripts]
engineering_team = "ai_engineering_team.main:run"
run_crew = "ai_engineering_team.main:run"
train = "ai_engineering_team.main:train"
replay = "ai_engineering_team.main:replay"
test = "ai_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"


